# terminator

./: .editorconfig  .gitattributes  .gitignore  AZURE_DEPLOYMENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER-WINDOWS.md  IDEAS.md  KUBERNETES-WINDOWS.md  PARALLEL_EXECUTION.md  PR_318_SUMMARY.md  RDP_FINAL_STATUS.md  RDP_IMPLEMENTATION_STATUS.md  RDP_INTEGRATION_SUMMARY.md  README.md  RELEASE.md  REQUIREMENTS_COVERAGE.md  SIMPLE_PARALLEL_EXECUTION.md  UTF8_SELECTOR_SUPPORT.md  WEBRTC_IMPLEMENTATION_SUMMARY.md  analyze_sap_dom.yml  browser_script.json  cache_performance_report.json  cache_performance_report2.json  check-vm-agent.ps1  comprehensive_form_analysis.yml  decode-agent.ps1  demo-remote-control.ps1  demo-walkthrough.md  demo_terminator.py  deploy-agent-simple.ps1  deploy-agent-to-vm.ps1  deploy-and-run-agent.ps1  deploy-autonomous.ps1  deploy-to-vm-real.ps1  final-demo.ps1  finish-deployment.ps1  form_analysis_mcp.json  (+29 more)
.cargo/: config.toml
.workflow_state/: analyze_sap_dom.json  comprehensive_form_analysis.json  form_analysis_simple.json
crates/terminator-computer-use/: Cargo.toml
crates/terminator-computer-use/src/: lib.rs
crates/terminator-mcp-agent/: Cargo.toml  README.md  build.rs  index.js  package-lock.json  package.json
crates/terminator-mcp-agent/examples/: test_pid_window.rs
crates/terminator-mcp-agent/npm/darwin-arm64/: package.json
crates/terminator-mcp-agent/npm/darwin-x64/: package.json
crates/terminator-mcp-agent/npm/linux-x64-gnu/: package.json
crates/terminator-mcp-agent/npm/win32-arm64-msvc/: package.json
crates/terminator-mcp-agent/npm/win32-x64-msvc/: package.json
crates/terminator-mcp-agent/scripts/: download-source.js
crates/terminator-mcp-agent/src/: cancellation.rs  child_process.rs  elicitation.rs  event_pipe.rs  execution_logger.rs  expression_eval.rs  helpers.rs  lib.rs  log_pipe.rs  main.rs  mcp_types.rs  omniparser.rs  output_parser.rs  posthog.rs  prompt.rs  scripting_engine.rs  sentry.rs  server.rs  server_sequence.rs  telemetry.rs  transpiler.rs  tree_formatter.rs  utils.rs  vcredist_check.rs  vision.rs  window_manager.rs  workflow_format.rs  workflow_typescript.rs
crates/terminator-mcp-agent/src/elicitation/: helpers.rs  mod.rs  schemas.rs  tests.rs
crates/terminator-mcp-agent/src/tests/: test_typescript_execution.rs
crates/terminator-mcp-agent/src/tools/: element.rs  inspection.rs  mod.rs  screenshot.rs  typecheck.rs  visibility.rs
crates/terminator-mcp-agent/tests/: test_js_engine.rs  test_screenshot_collection.rs  test_scripts_base_path.rs  test_typescript_telemetry.rs  unit_tests.rs
crates/terminator-mcp-agent/tests/integration/: package-lock.json  test_amazon_country_button_highlight.js  test_github_scroll_to_highlight.js  test_navigate_click.js  test_netronline_highlight.js  test_netronline_highlight_with_modal.js  test_request_cancellation.js  test_stop_highlighting.js  test_workflow_compatibility.rs
docker/: Dockerfile.linux  Dockerfile.windows  Dockerfile.windows.dev  README-Windows.md  demo-script.ps1  docker-compose.linux.yml  docker-compose.windows.dev.yml  docker-compose.windows.yml  test-docker-setup.ps1  validate-setup.py
docs/: CI_CD_SETUP.md  JAVA_ACCESS_BRIDGE.md  SELECTORS_CHEATSHEET.md  TERMINATOR_JS_API.md  WORKFLOW_EXAMPLES.md  WORKFLOW_URL_LOADING.md  cursor-automation-test.md
examples/: README.md  mspaint.py  (+33 more)
examples/clipboard_trigger_bot/src-tauri/: Cargo.toml  tauri.conf.json
examples/clipboard_trigger_bot/src-tauri/src/: main.rs
examples/mcp-client-example/: Cargo.toml  README.md
examples/summarizer/: Cargo.toml  README.md  setup_windows.ps1
examples/summarizer/src/: main.rs
examples/terminator-rust-examples/context-capture/: Cargo.toml  README.md  run.bat
examples/terminator-rust-examples/context-capture/src/: main.rs  windows_ui.rs
terminator-inspector/src-tauri/: Cargo.toml  tauri.conf.json
terminator-inspector/src-tauri/src/: main.rs
terminator-mcp-agent/: Cargo.toml  DEPLOYMENT_GUIDE.md  FIXED_TESTS_SUMMARY.md  METRICS.md  README.md  README_TEST_RUNNER.md  README_WEBRTC.md  REMOTE_UI_AUTOMATION.md  package-lock.json  package.json
terminator-mcp-agent/config/: remote_automation.toml
terminator-mcp-agent/docs/: telemetry.md
terminator-mcp-agent/examples/: accuracy_demo.rs  always_condition_example.json  annotated_tools_demo.rs  i94_cbp_automation.rs  metrics-demo.rs  remote_automation_example.rs  test_telemetry_real.rs  tools_with_hints_demo.rs
terminator-mcp-agent/npm/darwin-arm64/: package.json
terminator-mcp-agent/npm/darwin-x64/: package.json
terminator-mcp-agent/npm/linux-x64-gnu/: package.json
terminator-mcp-agent/npm/win32-x64-msvc/: package.json
terminator-mcp-agent/src/: expression_eval.rs  helpers.rs  lib.rs  main.rs  mcp_tool_hints.rs  metrics.rs  observability_tools.rs  output_parser.rs  parallel_test.rs  rdp_server.rs  remote_automation.rs  remote_client.rs  remote_common.rs  remote_protocol.rs  remote_server.rs  server.rs  server_sequence.rs  telemetry.rs  test_runner.rs  tool_annotations.rs  utils.rs  vm_connector.rs  workflow_typescript.rs
terminator-mcp-agent/src/streaming/: capture.rs  encoder.rs  mod.rs  signaling.rs
terminator-mcp-agent/tests/: README_ACCURACY_FRAMEWORK.md  TEST_SUMMARY.md  accuracy_measurement_test.rs  always_condition_test.rs  automation_accuracy_test.rs  basic_test.rs  helpers_test.rs  minimal_accuracy_test.rs.disabled  minimal_test_suite.rs  remote_integration_test.rs  remote_reliability_test.rs  simple_working_test.rs  unit_tests.rs  vm_integration_test.rs  webrtc_test.rs
terminator-observability/: CONTRIBUTING.md  Cargo.toml  INTEGRATION.md  README.md
terminator-observability/benches/: overhead.rs
terminator-observability/examples/: basic.rs  custom_handlers.rs  human_baseline.rs
terminator-observability/src/: context.rs  decorator.rs  error.rs  lib.rs  metrics.rs  session.rs  storage.rs  telemetry.rs  trace.rs
virtual-display-win/: Cargo.toml  README.md
virtual-display-win/examples/: list_displays.rs
virtual-display-win/src/: lib.rs  windows_impl.rs
(+379 files in other folders)
