[package]
name = "terminator-mcp-agent"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
terminator = { workspace = true }
serde_json = { workspace = true }
typed-builder = "0.20"
tracing-subscriber = { workspace = true }
rmcp = { version = "0.1.5", features = [
    "server",
    "transport-sse-server",
    "transport-io",
    "client",
    "transport-child-process",
] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "terminator-mcp-agent"
path = "src/main.rs"

[[bin]]
name = "terminator-mcp-test-runner"
path = "src/test_runner.rs"
