[package]
name = "terminator-mcp-agent"
version.workspace = true
edition.workspace = true

[lib]
name = "terminator_mcp_agent"
path = "src/lib.rs"

[[bin]]
name = "terminator-mcp-agent"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
terminator = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "9ca20c69b27e531a5eadfd4b5654592ab93e2b11", features = [
    "server",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
] }
futures = "0.3"
image = { version = "0.25.1", features = ["png"] }
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
axum = "0.8"

# Optional WebRTC dependencies
webrtc = { version = "0.12", optional = true }
async-trait = { workspace = true, optional = true }

[dev-dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "9ca20c69b27e531a5eadfd4b5654592ab93e2b11", features = [
    "client",
    "transport-child-process",
] }
tokio-test = "0.4"
anyhow = "1.0"

[features]
default = []
webrtc-streaming = ["webrtc", "async-trait"]
