[package]
name = "terminator-mcp-agent"
version.workspace = true
edition.workspace = true

[lib]
name = "terminator_mcp_agent"
path = "src/lib.rs"

[[bin]]
name = "terminator-mcp-agent"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
terminator = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { version = "0.1", features = [
    "server",
    "transport-io",
] }
futures = "0.3"
image = { version = "0.25.1", features = ["png"] }
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
axum = "0.8"

[dev-dependencies]
tokio-test = "0.4"
anyhow = "1.0"
rand = "0.8"
