[package]
name = "terminator-observability"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Terminator Contributors"]
description = "Observability and performance tracking for Terminator SDK automation agents"
documentation = "https://docs.rs/terminator-observability"
homepage = "https://github.com/yourusername/terminator"
repository = "https://github.com/yourusername/terminator"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["observability", "tracing", "automation", "performance", "metrics"]
categories = ["development-tools::profiling", "development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core workspace dependencies
terminator = { path = "../terminator" }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Time and identifiers
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

# Tracing and metrics (OpenTelemetry based)
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-opentelemetry = "0.23"
opentelemetry = { version = "0.22", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["tonic", "metrics", "trace"], optional = true }

# Metrics
metrics = "0.22"
metrics-util = "0.16"

# Storage
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"], optional = true }

# Utilities
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
arc-swap = "1.7"

# Optional dependencies
reqwest = { version = "0.11", features = ["json"], optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace", "cors"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.8"
tokio-test = "0.4"
insta = { version = "1.34", features = ["json"] }
proptest = "1.4"
pretty_assertions = "1.4"

[features]
default = ["otlp"]

# Export backends
otlp = ["opentelemetry-otlp"]
sqlite = ["sqlx"]

# Optional features
web-dashboard = ["axum", "tower", "tower-http", "reqwest"]

# Development features
unstable = []

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "custom_handlers"
path = "examples/custom_handlers.rs"

[[example]]
name = "human_baseline"
path = "examples/human_baseline.rs"

[[bench]]
name = "overhead"
harness = false

[profile.release]
lto = true
codegen-units = 1