[package]
name = "terminator-computer-use"
version = { workspace = true }
edition = { workspace = true }
description = "Gemini Computer Use - AI-powered autonomous desktop automation"
authors = ["Mediar AI"]
repository = "https://github.com/mediar-ai/terminator"
homepage = "https://github.com/mediar-ai/terminator"
license-file = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_os = "windows")'.dependencies]
sysinfo = { workspace = true }
