[package]
name = "summarizer"
version.workspace = true
edition.workspace = true

[dependencies]
arboard = "3.3.0"
regex = "1.10"
rdev = "0.5.3"
tokio = { workspace = true }

terminator = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uiautomation.workspace = true

