[package]
name = "summarizer"
version.workspace = true
edition.workspace = true

[dependencies]
arboard = "3.3.0"
regex = "1.10"
rdev = "0.5.3"
tokio = { workspace = true }

terminator = { path = "C:/Users/User/Desktop/terminator/terminator" }
global-hotkey = "0.4"
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uiautomation.workspace = true
clap = { version = "4.4", features = ["derive"] }
